7/16/2015, 0.3.17.1, FindIt: cache backwards compatibility fix (support lack of 'verify' key; treat as verify=False)
8/17/2015, 0.3.17.2, PubMedArticle: "true last page" feature. FindIt: Added NAJMS format. Pegged eutils version to 0.0.9. 
8/21/2015, 0.3.17.3, FindIt: fixed Lancet format.
2/17/2016, 0.4.0, PYTHON 2/3 COMPATIBILITY
2/29/2016, 0.4.0.1, PubMedArticle: bugfix for to_dict method, added test for to_dict function. (Thanks Tim Laurent!)
4/18/2016, 0.4.1, ClinvarFetcher / ClinVarVariant debut. See README for basic usage.
5/30/2016, 0.4.2a0, UrlReverse debut. Also some FindIt improvements, including the_scielo_chula for SciELO journals.
7/6/2016, 0.4.2a1, PubMedFetcher.pmids_for_citation success rate++ by removing urlencoded chars from journal title.
7/22/2016, 0.4.2a2, PubMedAuthor debut (many thanks to Martin Peters / FreakyBytes). Bugfixes for py2/3 compatibility.
9/26/2016, 0.4.3, Updates for NCBI switch to https. UrlReverse and PubMedAuthor ready for primetime.
10/14/2016, 0.4.3.5, UrlReverse: Critical bugfixes.
6/22/2016, 0.4.3.6, critical quick fix to accommodate change in newer eutils (cannot set cache_path). Fix for Issue #13
4/11/2018, 0.4.4, Removed configurable cachedir (eutils no longer supports the option).
9/30/2018, 0.4.4, citation_html property for PubmedArticle object by Alan Rubin. 
8/3/2019, 0.5, PYTHON3 SUPPORT ONLY.  Python 2.x will no longer be supported in further versions.
8/11/2019, 0.5.1, Added to text_mining regexp and wrapper functions for finding NCBI Books (NBK*) and PMC IDs.
8/15/2019, 0.5.2, Added PubMedFetcher.pmid_for_bookID and convert.bookid2pmid (latter is interface to former).
8/15/2019, 0.5.3, MedGenConcept: fixed OMIM property. Added .synonyms as magic property.  .uid and .medgen_uid both work to source Medgen UID (.uid is the "real" property). 
12/6/2020, 0.5.5, PubMedArticle/PubMedFetcher edge-case fixes courtesy of @jvansan.
5/28/2024, 0.5.6, Fixes lxml import issue due to change in 3rd-party library.