@@ -111,3 +111,4 @@
 8/15/2019, 0.5.3, MedGenConcept: fixed OMIM property. Added .synonyms as magic property.  .uid and .medgen_uid both work to source Medgen UID (.uid is the "real" property). 
 12/6/2020, 0.5.5, PubMedArticle/PubMedFetcher edge-case fixes courtesy of @jvansan.
 5/28/2024, 0.5.6, Fixes lxml import issue due to change in 3rd-party library.
+2/25/2025, 0.6.0, Sort all esearch results by relevance (following pubmed ranking algorithm).
